--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
         </div>
         
         <div class="form-group">
-          <label for="timeInMinutes">Time (minutes)</label>
-          <input type="number" id="timeInMinutes" name="timeInMinutes" required min="0">
+          <label for="timeInHours">Time (hours)</label>
+          <input type="number" id="timeInHours" name="timeInHours" required min="0" step="0.1">
         </div>
         
         <div class="form-group">
